# khoj

./: .gitignore  CLI.md  Cargo.toml  IMAGE_SEARCH.md  README.md  USAGE.md  file-search-plan.md
examples/: hybrid_search_demo.rs  index_and_search.rs  index_folder.rs  semantic_search.rs  simple_search.rs
src/: config.rs  error.rs  lib.rs  main.rs  web.rs
src/cli/: mod.rs
src/embedding/: image.rs  mod.rs  tokenizer.rs
src/extractors/: mod.rs  text.rs
src/indexer/: metadata.rs  mod.rs  walker.rs
src/search/: mod.rs
src/storage/: mod.rs  schema.sql  tantivy_index.rs  vector_store.rs
src/watcher/: mod.rs
static/: index.html
test_data/: README.txt
